# kcc

./: CMakeLists.txt  LICENSE  README.md  actions.cpp  archivehandler.cpp  archivehandler.h  copy_cut_paste.cpp  kcc.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
inc/: archivehandler.h  finder.h  mainwindow .h  mainwindow.h  sortfiltermodel.h
src/: actions.cpp  archivehandler.cpp  copypaste.cpp  finder.cpp  finder.ui  main.cpp  mainwindow.cpp  mainwindow.ui  sortfiltermodel.cpp
